--- a/public/envio.html
+++ b/public/envio.html
@@ -50,7 +50,8 @@
   </div>
 
   <script>
-    const API_URL = 'http://localhost:3000/api/avisos';
+    // ✅ CORRIGIDO: funciona local e no Render
+    const API_URL = '/api/avisos';
 
     function login() {
       const usuario = document.getElementById('usuario').value.trim();
