--- a/public/admin.html
+++ b/public/admin.html
@@ -1,128 +1,71 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-  <meta charset="UTF-8">
-  <title>Painel Admin</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      font-family: 'Roboto', sans-serif;
-      color: white;
-      padding: 40px;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-    .user-list {
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 500px;
-    }
-    .user-item {
-      margin-bottom: 10px;
-      padding: 10px;
-      background: rgba(0,0,0,0.2);
-      border-radius: 8px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .user-info {
-      flex: 1;
-    }
-    .btn-apagar {
-      background: #ff6b6b;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      padding: 6px 12px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    .btn-apagar:hover {
-      background: #e63946;
-    }
-  </style>
-</head>
-<body>
+<!-- ... início omitido, igual ao seu -->
+<script>
+  const logado = sessionStorage.getItem('logado');
+  if (logado !== 'admin') {
+    alert('Acesso negado! Apenas o administrador pode acessar.');
+    window.location.href = 'index.html';
+  }
 
-  <h1>Painel Administrativo</h1>
+  async function carregarUsuarios() {
+    const userList = document.getElementById('user-list');
 
-  <div class="user-list" id="user-list">
-    <p>Carregando usuários...</p>
-  </div>
+    try {
+      const res = await fetch('/api/admin/usuarios');
+      if (!res.ok) throw new Error('Erro ao buscar usuários');
 
-  <script>
-    const logado = sessionStorage.getItem('logado');
-    if (logado !== 'admin') {
-      alert('Acesso negado! Apenas o administrador pode acessar.');
-      window.location.href = 'index.html';
-    }
+      const usuarios = await res.json();
 
-    async function carregarUsuarios() {
-      const userList = document.getElementById('user-list');
-
-      try {
-        const res = await fetch('http://localhost:3000/api/admin/usuarios');
-        if (!res.ok) throw new Error('Erro ao buscar usuários');
-
-        const usuarios = await res.json();
-
-        if (usuarios.length === 0) {
-          userList.innerHTML = '<p>Nenhum usuário cadastrado.</p>';
-          return;
-        }
-
-        userList.innerHTML = '';
-        usuarios.forEach(user => {
-          const div = document.createElement('div');
-          div.className = 'user-item';
-
-          const info = document.createElement('div');
-          info.className = 'user-info';
-          info.textContent = `ID: ${user.id} | Usuário: ${user.usuario} | Email: ${user.email || '-'}`;
-
-          const btn = document.createElement('button');
-          btn.className = 'btn-apagar';
-          btn.textContent = 'Apagar';
-          btn.onclick = () => apagarUsuario(user.id);
-
-          div.appendChild(info);
-          div.appendChild(btn);
-          userList.appendChild(div);
-        });
-
-      } catch (err) {
-        console.error(err);
-        userList.innerHTML = '<p>Erro ao carregar usuários.</p>';
+      if (usuarios.length === 0) {
+        userList.innerHTML = '<p>Nenhum usuário cadastrado.</p>';
+        return;
       }
+
+      userList.innerHTML = '';
+      usuarios.forEach(user => {
+        const div = document.createElement('div');
+        div.className = 'user-item';
+
+        const info = document.createElement('div');
+        info.className = 'user-info';
+        info.textContent = `ID: ${user.id} | Usuário: ${user.usuario} | Email: ${user.email || '-'}`;
+
+        const btn = document.createElement('button');
+        btn.className = 'btn-apagar';
+        btn.textContent = 'Apagar';
+        btn.onclick = () => apagarUsuario(user.id);
+
+        div.appendChild(info);
+        div.appendChild(btn);
+        userList.appendChild(div);
+      });
+
+    } catch (err) {
+      console.error(err);
+      userList.innerHTML = '<p>Erro ao carregar usuários.</p>';
     }
+  }
 
-    async function apagarUsuario(id) {
-      if (!confirm('Deseja realmente apagar este usuário?')) return;
+  async function apagarUsuario(id) {
+    if (!confirm('Deseja realmente apagar este usuário?')) return;
 
-      try {
-        const res = await fetch(`http://localhost:3000/api/admin/usuarios/${id}`, {
-          method: 'DELETE'
-        });
+    try {
+      const res = await fetch(`/api/admin/usuarios/${id}`, {
+        method: 'DELETE'
+      });
 
-        const data = await res.json();
+      const data = await res.json();
 
-        if (!res.ok) throw new Error(data.erro || 'Erro ao apagar');
+      if (!res.ok) throw new Error(data.erro || 'Erro ao apagar');
 
-        alert('Usuário apagado com sucesso!');
-        carregarUsuarios();
-      } catch (err) {
-        alert('Erro ao apagar usuário.');
-        console.error(err);
-      }
+      alert('Usuário apagado com sucesso!');
+      carregarUsuarios();
+    } catch (err) {
+      alert('Erro ao apagar usuário.');
+      console.error(err);
     }
+  }
 
-    carregarUsuarios();
-  </script>
-
+  carregarUsuarios();
+</script>
 </body>
 </html>
