--- a/public/admin.html
+++ b/public/admin.html
@@ -1,71 +1,114 @@
-<!-- ... início omitido, igual ao seu -->
-<script>
-  const logado = sessionStorage.getItem('logado');
-  if (logado !== 'admin') {
-    alert('Acesso negado! Apenas o administrador pode acessar.');
-    window.location.href = 'index.html';
-  }
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <title>Painel Admin</title>
+  <style>
+    body {
+      background-color: #222;
+      color: white;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
 
-  async function carregarUsuarios() {
-    const userList = document.getElementById('user-list');
+    h2 {
+      color: #ffeb3b;
+    }
 
-    try {
-      const res = await fetch('/api/admin/usuarios');
-      if (!res.ok) throw new Error('Erro ao buscar usuários');
+    .user-item {
+      background: #333;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-      const usuarios = await res.json();
+    .btn-apagar {
+      background-color: #e53935;
+      border: none;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
-      if (usuarios.length === 0) {
-        userList.innerHTML = '<p>Nenhum usuário cadastrado.</p>';
-        return;
+    .btn-apagar:hover {
+      background-color: #c62828;
+    }
+  </style>
+</head>
+<body>
+  <h2>Gerenciar Usuários</h2>
+  <div id="user-list"></div>
+
+  <script>
+    const logado = sessionStorage.getItem('logado');
+    if (logado !== 'admin') {
+      alert('Acesso negado! Apenas o administrador pode acessar.');
+      window.location.href = 'index.html';
+    }
+
+    async function carregarUsuarios() {
+      const userList = document.getElementById('user-list');
+
+      try {
+        const res = await fetch('/api/admin/usuarios');
+        if (!res.ok) throw new Error('Erro ao buscar usuários');
+
+        const usuarios = await res.json();
+
+        if (usuarios.length === 0) {
+          userList.innerHTML = '<p>Nenhum usuário cadastrado.</p>';
+          return;
+        }
+
+        userList.innerHTML = '';
+        usuarios.forEach(user => {
+          const div = document.createElement('div');
+          div.className = 'user-item';
+
+          const info = document.createElement('div');
+          info.textContent = `ID: ${user.id} | Usuário: ${user.usuario} | Email: ${user.email || '-'}`;
+
+          const btn = document.createElement('button');
+          btn.className = 'btn-apagar';
+          btn.textContent = 'Apagar';
+          btn.onclick = () => apagarUsuario(user.id);
+
+          div.appendChild(info);
+          div.appendChild(btn);
+          userList.appendChild(div);
+        });
+
+      } catch (err) {
+        console.error(err);
+        userList.innerHTML = '<p>Erro ao carregar usuários.</p>';
       }
-
-      userList.innerHTML = '';
-      usuarios.forEach(user => {
-        const div = document.createElement('div');
-        div.className = 'user-item';
-
-        const info = document.createElement('div');
-        info.className = 'user-info';
-        info.textContent = `ID: ${user.id} | Usuário: ${user.usuario} | Email: ${user.email || '-'}`;
-
-        const btn = document.createElement('button');
-        btn.className = 'btn-apagar';
-        btn.textContent = 'Apagar';
-        btn.onclick = () => apagarUsuario(user.id);
-
-        div.appendChild(info);
-        div.appendChild(btn);
-        userList.appendChild(div);
-      });
-
-    } catch (err) {
-      console.error(err);
-      userList.innerHTML = '<p>Erro ao carregar usuários.</p>';
     }
-  }
 
-  async function apagarUsuario(id) {
-    if (!confirm('Deseja realmente apagar este usuário?')) return;
+    async function apagarUsuario(id) {
+      if (!confirm('Deseja realmente apagar este usuário?')) return;
 
-    try {
-      const res = await fetch(`/api/admin/usuarios/${id}`, {
-        method: 'DELETE'
-      });
+      try {
+        const res = await fetch(`/api/admin/usuarios/${id}`, {
+          method: 'DELETE'
+        });
 
-      const data = await res.json();
+        const data = await res.json();
 
-      if (!res.ok) throw new Error(data.erro || 'Erro ao apagar');
+        if (!res.ok) throw new Error(data.erro || 'Erro ao apagar');
 
-      alert('Usuário apagado com sucesso!');
-      carregarUsuarios();
-    } catch (err) {
-      alert('Erro ao apagar usuário.');
-      console.error(err);
+        alert('Usuário apagado com sucesso!');
+        carregarUsuarios();
+      } catch (err) {
+        alert('Erro ao apagar usuário.');
+        console.error(err);
+      }
     }
-  }
 
-  carregarUsuarios();
-</script>
+    carregarUsuarios();
+  </script>
 </body>
 </html>
