--- a/public/tv2.html
+++ b/public/tv2.html
@@ -5,42 +5,58 @@
   <title>Painel de Avisos</title>
   <style>
     body {
-      background-color: #121212;
+      margin: 0;
+      padding: 0;
+      background-color: #111;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
       text-align: center;
-      padding: 20px;
     }
 
     #destaque1, #destaque2 {
-      font-size: 32px;
-      margin-bottom: 20px;
+      font-size: 2.5em;
+      margin: 10px 0;
+      color: white;
     }
 
     .hora-destaque {
-      font-size: 16px;
-      margin-left: 10px;
-      color: #ffeb3b;
+      font-size: 0.5em;
+      color: #ffc107;
+      margin-left: 12px;
     }
 
     #marquee {
-      font-size: 20px;
+      width: 100%;
+      padding: 10px 0;
       color: #ccc;
-      display: block;
-      margin-top: 40px;
+      font-size: 1.2em;
       white-space: nowrap;
       overflow: hidden;
-      animation: marquee 20s linear infinite;
+      box-sizing: border-box;
+      position: absolute;
+      bottom: 0;
+    }
+
+    #marquee span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: correr 25s linear infinite;
     }
 
     .hora {
-      font-size: 14px;
-      margin-left: 5px;
+      font-size: 0.8em;
       color: #ff9800;
+      margin-left: 8px;
     }
 
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
+    @keyframes correr {
+      0% { transform: translateX(0); }
       100% { transform: translateX(-100%); }
     }
   </style>
@@ -49,13 +65,13 @@
 
   <div id="destaque1"></div>
   <div id="destaque2"></div>
-  <div id="marquee"></div>
+  <div id="marquee"><span>Carregando mensagens...</span></div>
 
   <script>
     async function atualizarPainel() {
       const destaque1 = document.getElementById('destaque1');
       const destaque2 = document.getElementById('destaque2');
-      const marquee = document.getElementById('marquee');
+      const marquee = document.querySelector('#marquee span');
 
       try {
         const res = await fetch('/api/avisos');
@@ -93,11 +109,7 @@
       return d.toLocaleString('pt-BR');
     }
 
-    function voltar() {
-      window.history.back();
-    }
-
-    setInterval(atualizarPainel, 2000);
+    setInterval(atualizarPainel, 3000);
     atualizarPainel();
   </script>
 </body>
