--- a/public/admin.html
+++ b/public/admin.html
@@ -2,46 +2,94 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Painel Admin</title>
+  <title>Painel Administrativo</title>
   <style>
     body {
-      background-color: #222;
+      background-color: #121212;
       color: white;
       font-family: Arial, sans-serif;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
     }
 
     h2 {
+      margin-top: 40px;
+      font-size: 2rem;
       color: #ffeb3b;
+      text-align: center;
+    }
+
+    #user-list {
+      width: 90%;
+      max-width: 800px;
+      margin: 30px auto;
     }
 
     .user-item {
-      background: #333;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
+      background: #1e1e1e;
+      padding: 15px 20px;
+      border-radius: 8px;
+      margin-bottom: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+    }
+
+    .user-info {
+      font-size: 16px;
+      color: #fff;
     }
 
     .btn-apagar {
       background-color: #e53935;
       border: none;
       color: white;
-      padding: 8px 12px;
-      border-radius: 4px;
+      padding: 8px 14px;
+      border-radius: 5px;
       cursor: pointer;
+      font-size: 14px;
+      transition: background 0.2s ease;
     }
 
     .btn-apagar:hover {
       background-color: #c62828;
     }
+
+    .voltar {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #444;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .voltar:hover {
+      background-color: #666;
+    }
+
+    .mensagem {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 16px;
+      color: #bbb;
+    }
   </style>
 </head>
 <body>
-  <h2>Gerenciar Usuários</h2>
-  <div id="user-list"></div>
+  <button class="voltar" onclick="window.location.href='envio.html'">← Voltar</button>
+  <h2>Painel de Usuários</h2>
+  <div id="user-list" class="mensagem">Carregando usuários...</div>
 
   <script>
     const logado = sessionStorage.getItem('logado');
@@ -60,7 +108,7 @@
         const usuarios = await res.json();
 
         if (usuarios.length === 0) {
-          userList.innerHTML = '<p>Nenhum usuário cadastrado.</p>';
+          userList.innerHTML = '<p class="mensagem">Nenhum usuário cadastrado.</p>';
           return;
         }
 
@@ -70,6 +118,7 @@
           div.className = 'user-item';
 
           const info = document.createElement('div');
+          info.className = 'user-info';
           info.textContent = `ID: ${user.id} | Usuário: ${user.usuario} | Email: ${user.email || '-'}`;
 
           const btn = document.createElement('button');
@@ -84,7 +133,7 @@
 
       } catch (err) {
         console.error(err);
-        userList.innerHTML = '<p>Erro ao carregar usuários.</p>';
+        userList.innerHTML = '<p class="mensagem">Erro ao carregar usuários.</p>';
       }
     }
 
