--- a/public/tv2.html
+++ b/public/tv2.html
@@ -92,14 +92,39 @@
       cursor: pointer;
       box-shadow: 0 0 5px black;
       transition: background 0.3s;
+      z-index: 999;
     }
 
     #btn-voltar:hover {
       background-color: #ffe600;
     }
+
+    /* Botão Tela Cheia */
+    #btn-fullscreen {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 14px;
+      font-size: 16px;
+      background-color: #00ff88;
+      color: black;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 5px black;
+      transition: background 0.3s;
+      z-index: 999;
+    }
+
+    #btn-fullscreen:hover {
+      background-color: #00dd77;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Botão Tela Cheia -->
+  <button id="btn-fullscreen" onclick="telaCheia()">⛶ Tela Cheia</button>
 
   <h1>Quadro de Avisos</h1>
 
@@ -120,7 +145,7 @@
       const marquee = document.getElementById('marquee');
 
       try {
-        const res = await fetch('/api/avisos'); // ✅ Corrigido para funcionar no Render
+        const res = await fetch('/api/avisos');
         const historico = await res.json();
 
         if (!historico || historico.length === 0) {
@@ -157,6 +182,17 @@
 
     function voltar() {
       window.history.back();
+    }
+
+    function telaCheia() {
+      const el = document.documentElement;
+      if (el.requestFullscreen) {
+        el.requestFullscreen();
+      } else if (el.webkitRequestFullscreen) {
+        el.webkitRequestFullscreen();
+      } else if (el.msRequestFullscreen) {
+        el.msRequestFullscreen();
+      }
     }
 
     setInterval(atualizarPainel, 2000);
